# eggshell

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  egg  install-githooks  presubmit.sh
.github/workflows/: rust.yml
crates/egg-ast/: Cargo.toml
crates/egg-ast/src/: annotations.rs  ast.rs  errors.rs  iterators.rs  lib.rs  test_utils.rs
crates/egg-context/: Cargo.toml
crates/egg-context/src/: context.rs  context_manager.rs  data_types.rs  errors.rs  lib.rs
crates/egg-errors/: Cargo.toml
crates/egg-errors/src/: lib.rs
crates/egg-grammar/: Cargo.toml
crates/egg-grammar/src/: lib.rs
crates/egg-parser/: Cargo.toml
crates/egg-parser/src/: ast.rs  errors.rs  lexer.rs  lexer_util.rs  lib.rs  meta_parse.rs  meta_parse_rule.rs  parser.rs  source.rs  token.rs
crates/egg-parser/tests/: meta_parse_test.rs  parser_test.rs  tokenizer_tests.rs
crates/egg-parser/tests/common/: mod.rs
crates/egg-sema/: Cargo.toml
crates/egg-sema/src/: annotations.rs  errors.rs  lib.rs  memory.rs  types.rs
crates/egg-source/: Cargo.toml
crates/egg-source/src/: errors.rs  lib.rs  location.rs  source_file.rs  source_manager.rs  token.rs
crates/egg-testutils/: Cargo.toml
crates/egg-testutils/src/: errors.rs  utils.rs
crates/egg-types/: Cargo.toml
crates/egg-types/src/: base.rs  errors.rs  lib.rs  result.rs
docs/: language-grammar.md  language-guide.md
egg-py/: add_testcases.py  main.py  pyproject.toml
egg-py/backend/: py_generator.py  py_generator_test.py  temporary_objects.py
egg-py/cli/: cli.py
egg-py/frontend/: egg.lark  lexer.py  lexer_constants.py  lexer_test.py  lexer_util.py  lowering.py  lowering_test.py  mm_trie.py  mm_trie_test.py  parser.py  parser_test.py  source.py  source_test.py
egg-py/parsing/: __init__.py  egg.lark  lexer.py  lexer_constants.py  lexer_test.py  lexer_util.py  lowering.py  lowering_test.py  parser.py  parser_test.py
egg-py/runtime/: egg_lib.py  egg_lib_test.py  external_command.py  memory.py  memory_test.py  runtime_test.py  types.py
eggo/: go.mod
eggo/lexer/: dfa.go  dfa_states.go  lexer.go  lexer_test.go  max_munch.go  max_munch_test.go  token_patterns.go  tokens.go
eggo/source/: source.go  source_location.go  source_manager.go  source_manager_test.go  source_test.go
examples/: large_benchmark.egg  split.egg
hooks/: pre-commit  pre-push
lib/: Makefile
lib/lexer/: lexer.h  lexer_pybind.cpp  sources.h  tokens.h
scripts/: run_linters.py
src/: add_testcases.py  ast.rs  cli.rs  egg_error.rs  lexer.rs  lexer_util.rs  lib.rs  main.py  main.rs  meta_parse.rs  parser.rs  pyproject.toml  source.rs  token.rs  tokenizer.rs  tokenizer_util.rs
src/backend/: py_generator.py  py_generator_test.py  temporary_objects.py
src/backend_py/: py_generator.py  py_generator_test.py  temporary_objects.py
src/backend_py/runtime/: egg_lib.py  external_commands.py  memory.py  memory_test.py  runtime_test.py
src/backend_py/runtime/types/: collections.py  functional.py  numeric.py  objects.py
src/cli/: cli.py  profilers.py
src/frontend/: egg.lark  lexer.py  lexer_constants.py  lexer_test.py  lexer_util.py  lowering.py  lowering_test.py  mm_trie.py  mm_trie_test.py  parser.py  parser_test.py  source.py  source_test.py
src/runtime/: egg_lib.py  egg_lib_test.py  external_commands.py  memory.py  memory_test.py  runtime_test.py  types.py
src/runtime/types/: collections.py  functional.py  objects.py
src/yolk/: string_utilities.py  string_utilities_test.py  yolk.py  yolk_test.py
tests/: meta_parse_test.rs  parser_test.rs  run_tests  tokenizer_tests.rs
tests/common/: mod.rs
tests/data/: basic.yaml
tests/fizzbuzz_with_while_loops/: fizzbuzz.egg  fizzbuzz.golden
yolk/: main-test.cpp  main.cpp
yolk/cli/: cli.cpp  cli.h
yolk/examples/: example.psuedoyolk
yolk/instruction/: instructionArgs.cpp  instructionArgs.h  instructions.cpp  instructions.h  instructionsTest.cpp
yolk/parser/: InstructionParsersTest.cpp  failures.h  flags.h  flagsTest.cpp  instructionParser.h  instructionParserTest.cpp  instructionParsers.cpp  instructionParsers.h  parser.h  parserTest.cpp
yolk/utils/: testUtils.h
