[package]
name = "eggshell"
version = "0.1.0"
authors = ["Ryan Beltran"]
edition = "2021"

[dependencies]
egg-errors = { path = "./crates/egg-errors" }
egg-parser = { path = "./crates/egg-parser" }
egg-sema = { path = "./crates/egg-sema" }
egg-source = { path = "./crates/egg-source" }

clap = { version = "4.3.21", features = ["derive", "wrap_help"] }

[workspace]
members = [
    "crates/egg-errors",
    "crates/egg-parser",
    "crates/egg-sema",
    "crates/egg-source",
]